-feature#1580: Support Drag & Drop for Report Items
-feature#1581: Allow Mass Adding of Graphs to Reports
-feature#1584: Allow theme selection when installing
-feature#1597: Ensure synchronised files have same attributes as originals
-feature#1593: Allow External links to auto refresh
-feature#1610: Script STDERR logging
-feature#1677: Default Tree nodes sorting to be inherited
-feature#1691: Add a 'Copy graph' option to context menu of graphs
-feature#1703: Provide i18n for the graph right context menu
-feature#1709: Dont warn when attempting to make updates in the past
-feature#1711: Support specifying MySQL SSL file paths in the database API
-feature: Make Graph and Data Source suggested naming more efficient
-feature: Make tree editing responive
-feature: Add support for DDERIVE and DCOUNTER to Cacti
-feature: Add Timezone support for Remote Data Collectors
-feature: Add One Minute Sampling to the default Data Source Profiles
-feature: Allow Top tabs to be Glyphs or Text or both
-feature: Update JavaScript library c3.js to version 0.5.4
-feature: Update JavaScript library jquery.tablesorter.js to version 2.30.5
-feature: Update JavaScript library jquery-migrate.js to 3.0.1
-feature: Update phpseclib to version 2.0.11
-feature: Update JavaScript library jquery.js to 3.3.1
-feature: Make Top Tabs use Ajax Callback
-feature: Make all user settings dynamic and allow resetting to default.
-feature: Change password page provides visible confirmation of password rules
-feature: Allow ASCII filepath paths to not be found on settings save
-feature: Provide option to debug width errors where output exceeds column width
-feature: Allow snmpagent to be disabled for very large installs

1.1.38
-issue#1501: cmd.php poller not stripping alpha from snmp get values
-issue#1515: Special characters not rendered properly in settings
-issue#1530: Inconsistent behaviour handling blank Field Name/Value when editing data query suggested values